--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,14 @@
 	<groupId>org.mule.tooling.test</groupId>
 	<artifactId>mock-maven-repository</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
 	<properties>
-		<aether.version>1.0.2.v20150114</aether.version>
-		<httpClient.version>4.5.4</httpClient.version>
-		<maven.version>3.3.9</maven.version>
-		<commons.io.version>2.6</commons.io.version>
-		<junit.version>4.12</junit.version>
-		<mockito-core.version>1.10.19</mockito-core.version>
-		<hamcrest-library.version>1.3</hamcrest-library.version>
-
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
+		<aether.version>1.0.2.v20150114</aether.version>
+		<maven.version>3.3.9</maven.version>
+		<junit.version>4.12</junit.version>
 	</properties>
 
 	<dependencies>
@@ -26,11 +21,6 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
 			<version>${maven.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.aether</groupId>
-			<artifactId>aether-api</artifactId>
-			<version>${aether.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.aether</groupId>
@@ -42,16 +32,19 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>${mockito-core.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>${hamcrest-library.version}</version>
-		</dependency>
 	</dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>mule-releases</id>
+            <name>Mule Release Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>mule-snapshots</id>
+            <name>Mule Snapshot Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
